--- a/React/boilerplate/package.json
+++ b/React/boilerplate/package.json
@@ -2,11 +2,13 @@
   "name": "boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo Hello Patrick",
     "start": "echo Hello Start",
-    "build": "babel src -d lib"
+    "build-babel": "babel src -d lib",
+    "build-webpack": "webpack --config webpack.config.js",
+    "build": "npm run build-babel && npm run build-webpack"
   },
   "author": "Patrick",
   "license": "ISC",
@@ -14,6 +16,14 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12"
+    "@babel/preset-react": "^7.17.12",
+    "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
